apollo-router-core/src/query_planner/snapshots/apollo_router_core__query_planner__bridge_query_planner__tests__empty_query_plan_should_be_a_planner_error.snap
---
source: apollo-router-core/src/query_planner/bridge_query_planner.rs
assertion_line: 164
expression: "BridgeQueryPlanner::new(Arc::new(example_schema())).await.unwrap().get(include_str!(\"testdata/unknown_introspection_query.graphql\").into(),\n            None, Default::default()).await.unwrap_err()"
---
EmptyPlan(
    Some(
        UsageReporting {
            stats_report_key: "# -\n{__schema{queryType{name}}}",
            referenced_fields_by_type: {
                "Query": ReferencedFieldsForType {
                    field_names: Some(
                        [
                            "__schema",
                        ],
                    ),
                    is_interface: Some(
                        false,
                    ),
                },
                "__Schema": ReferencedFieldsForType {
                    field_names: Some(
                        [
                            "queryType",
                        ],
                    ),
                    is_interface: Some(
                        false,
                    ),
                },
                "__Type": ReferencedFieldsForType {
                    field_names: Some(
                        [
                            "name",
                        ],
                    ),
                    is_interface: Some(
                        false,
                    ),
                },
            },
        },
    ),
)
