apollo-router-core/src/query_planner/snapshots/apollo_router_core__query_planner__bridge_query_planner__tests__plan_invalid_query.snap
---
source: apollo-router-core/src/query_planner/bridge_query_planner.rs
assertion_line: 147
expression: result
---
PlanningErrors(
    PlanErrors {
        errors: [
            PlanError {
                message: Some(
                    "Fragment \"UnusedTestFragment\" is never used.",
                ),
                extensions: None,
            },
        ],
        usage_reporting: Some(
            UsageReporting {
                stats_report_key: "## GraphQLValidationFailure\n",
                referenced_fields_by_type: {},
            },
        ),
    },
)
