apollo-router-core/src/query_planner/snapshots/apollo_router_core__query_planner__bridge_query_planner__tests__plan_invalid_query_errors.snap
---
source: apollo-router-core/src/query_planner/bridge_query_planner.rs
expression: plan_errors.errors
---
[
    PlanError {
        message: Some(
            "Fragment \"UnusedTestFragment\" is never used.",
        ),
        extensions: None,
    },
]
