apollo-router-core/src/query_planner/snapshots/apollo_router_core__query_planner__bridge_query_planner__tests__plan_invalid_query_usage_reporting.snap
---
source: apollo-router-core/src/query_planner/bridge_query_planner.rs
expression: plan_errors.usage_reporting
---
{
  "statsReportKey": "## GraphQLValidationFailure\n",
  "referencedFieldsByType": {}
}
