apollo-router-core/src/query_planner/snapshots/apollo_router_core__query_planner__bridge_query_planner__tests__plan_root.snap
---
source: apollo-router-core/src/query_planner/bridge_query_planner.rs
expression: result.root
---
Fetch(
    FetchNode {
        service_name: "accounts",
        requires: [],
        variable_usages: [],
        operation: "{me{name{first last}}}",
        operation_name: None,
        operation_kind: Query,
    },
)
