apollo-router-core/src/query_planner/snapshots/apollo_router_core__query_planner__bridge_query_planner__tests__plan_usage_reporting.snap
---
source: apollo-router-core/src/query_planner/bridge_query_planner.rs
expression: result.usage_reporting
---
{
  "statsReportKey": "# -\n{me{name{first last}}}",
  "referencedFieldsByType": {
    "Name": {
      "fieldNames": [
        "first",
        "last"
      ],
      "isInterface": false
    },
    "Query": {
      "fieldNames": [
        "me"
      ],
      "isInterface": false
    },
    "User": {
      "fieldNames": [
        "name"
      ],
      "isInterface": false
    }
  }
}
